Moved ShutterStock module to API module; Created navigation view with header and footer; Implemented button that opens project's Github; Removed button listener and other validations from MainActivity and transferred to its presenter class; Created portuguese strings file; Created style for text views; Created placeholder for images.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
+    <!-- APP -->
     <string name="app_name">Gallery App</string>
+
+    <!-- NAVIGATION VIEW (HEADER) -->
+    <string name="navigation_view_header_text">UPDAY</string>
+
+    <!-- NAVIGATION VIEW (FOOTER) -->
+    <string name="navigation_view_footer_text">PROJECT\'S GIT</string>
+
+    <!-- MISC -->
+    <string name="github_uri">https://github.com/PedroOkawa/gallery-app</string>
 </resources>
