Fixed bug with first load (check if the number of images shown are less than the limit and load more); Created details layout; Refactored hardcoded strings (passed to strings file); Included Crashlytics.

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -5,4 +5,8 @@
 
     <!-- NAVIGATION VIEW (FOOTER) -->
     <string name="navigation_view_footer_text">GIT DO PROJETO</string>
+
+    <!-- MISC -->
+    <string name="contributor_label">Contributor: </string>
+    <string name="category_label">Categorias: </string>
 </resources>
