Refactor (MainPresenter, MainActivity, DetailsPresenter, DetailsActivity, ShutterPresenter); Updated error message; Handling Crashes with crashlytics.

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -13,4 +13,5 @@
     <!-- MISC -->
     <string name="contributor_label">Contributor: </string>
     <string name="category_label">Categorias: </string>
+    <string name="connection_error_message">Hum, parece que você não está online</string>
 </resources>
