Refactored all the instrumentation tests and included six more tests; Created matcher to handle edittext validations; Refactored all the layout files (passed all values to dimens and strings); Changed the functions related to the type to make it possible to get data from any language.

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -6,6 +6,12 @@
     <!-- NAVIGATION VIEW (FOOTER) -->
     <string name="navigation_view_footer_text">GIT DO PROJETO</string>
 
+    <!-- MAIN ACTIVITY -->
+    <string name="type_all">Todas</string>
+    <string name="type_photo">Foto</string>
+    <string name="type_illustration">Ilustração</string>
+    <string name="type_vector">Vetor</string>
+
     <!-- DETAILS ACTIVITY -->
     <string name="activity_details_menu_share">Compartilhar</string>
     <string name="activity_details_intent_share">Compartilhar imagem</string>
